--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -119,15 +119,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "775b56da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Transaction ID</th>\n",
+       "      <th>Date of Travel</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>City</th>\n",
+       "      <th>KM Travelled</th>\n",
+       "      <th>Price Charged</th>\n",
+       "      <th>Cost of Trip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000011</td>\n",
+       "      <td>42377</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>370.95</td>\n",
+       "      <td>313.6350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000012</td>\n",
+       "      <td>42375</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>28.62</td>\n",
+       "      <td>358.52</td>\n",
+       "      <td>334.8540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000013</td>\n",
+       "      <td>42371</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>9.04</td>\n",
+       "      <td>125.20</td>\n",
+       "      <td>97.6320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000014</td>\n",
+       "      <td>42376</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>33.17</td>\n",
+       "      <td>377.40</td>\n",
+       "      <td>351.6020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000015</td>\n",
+       "      <td>42372</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>8.73</td>\n",
+       "      <td>114.62</td>\n",
+       "      <td>97.7760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359387</th>\n",
+       "      <td>10440101</td>\n",
+       "      <td>43108</td>\n",
+       "      <td>Yellow Cab</td>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>69.24</td>\n",
+       "      <td>63.3600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359388</th>\n",
+       "      <td>10440104</td>\n",
+       "      <td>43104</td>\n",
+       "      <td>Yellow Cab</td>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>8.40</td>\n",
+       "      <td>113.75</td>\n",
+       "      <td>106.8480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359389</th>\n",
+       "      <td>10440105</td>\n",
+       "      <td>43105</td>\n",
+       "      <td>Yellow Cab</td>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>27.75</td>\n",
+       "      <td>437.07</td>\n",
+       "      <td>349.6500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359390</th>\n",
+       "      <td>10440106</td>\n",
+       "      <td>43105</td>\n",
+       "      <td>Yellow Cab</td>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>146.19</td>\n",
+       "      <td>114.0480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359391</th>\n",
+       "      <td>10440107</td>\n",
+       "      <td>43102</td>\n",
+       "      <td>Yellow Cab</td>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>12.76</td>\n",
+       "      <td>191.58</td>\n",
+       "      <td>177.6192</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>359392 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Transaction ID  Date of Travel     Company           City  \\\n",
+       "0             10000011           42377    Pink Cab     ATLANTA GA   \n",
+       "1             10000012           42375    Pink Cab     ATLANTA GA   \n",
+       "2             10000013           42371    Pink Cab     ATLANTA GA   \n",
+       "3             10000014           42376    Pink Cab     ATLANTA GA   \n",
+       "4             10000015           42372    Pink Cab     ATLANTA GA   \n",
+       "...                ...             ...         ...            ...   \n",
+       "359387        10440101           43108  Yellow Cab  WASHINGTON DC   \n",
+       "359388        10440104           43104  Yellow Cab  WASHINGTON DC   \n",
+       "359389        10440105           43105  Yellow Cab  WASHINGTON DC   \n",
+       "359390        10440106           43105  Yellow Cab  WASHINGTON DC   \n",
+       "359391        10440107           43102  Yellow Cab  WASHINGTON DC   \n",
+       "\n",
+       "        KM Travelled  Price Charged  Cost of Trip  \n",
+       "0              30.45         370.95      313.6350  \n",
+       "1              28.62         358.52      334.8540  \n",
+       "2               9.04         125.20       97.6320  \n",
+       "3              33.17         377.40      351.6020  \n",
+       "4               8.73         114.62       97.7760  \n",
+       "...              ...            ...           ...  \n",
+       "359387          4.80          69.24       63.3600  \n",
+       "359388          8.40         113.75      106.8480  \n",
+       "359389         27.75         437.07      349.6500  \n",
+       "359390          8.80         146.19      114.0480  \n",
+       "359391         12.76         191.58      177.6192  \n",
+       "\n",
+       "[359392 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cab_db = pd.read_csv('DataSets\\Cab_Data.csv')\n",
-    "city_db = pd.read_csv('DataSets\\City.csv')\n",
-    "customer_db = pd.read_csv('DataSets\\Customer_ID.csv')\n",
-    "transaction_db = pd.read_csv('DataSets\\Transaction_ID.csv')"
+    "cab_db = pd.read_csv('Cab_Data.csv')\n",
+    "city_db = pd.read_csv('City.csv')\n",
+    "customer_db = pd.read_csv('Customer_ID.csv')\n",
+    "transaction_db = pd.read_csv('Transaction_ID.csv')\n"
    ]
   }
  ],
