changed date to yyyy-mm-dd

--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "97456a3e",
+   "execution_count": 3,
+   "id": "f3b19ae1",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4         114.62        97.776  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4ad6b50a",
+   "execution_count": 4,
+   "id": "9c315258",
    "metadata": {
     "scrolled": true
    },
@@ -218,7 +218,7 @@
        "4  SILICON VALLEY   1,177,609     27,247 "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "30e241d0",
+   "execution_count": 5,
+   "id": "143408c3",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "4        27182   Male   33                8536"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "543b62df",
+   "execution_count": 6,
+   "id": "d23d1ffc",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "4        10000015        27182         Card"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ed5acf98",
+   "execution_count": 7,
+   "id": "7139184f",
    "metadata": {
     "scrolled": true
    },
@@ -594,7 +594,7 @@
        "9         156.98       113.256        57982         Cash  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a072f3b7",
+   "execution_count": 8,
+   "id": "491b7925",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Transaction ID  Date of Travel   KM Travelled  Price Charged  \\\n",
+      "count    3.593920e+05   359392.000000  359392.000000  359392.000000   \n",
+      "mean     1.022076e+07    42964.067998      22.567254     423.443311   \n",
+      "std      1.268058e+05      307.467197      12.233526     274.378911   \n",
+      "min      1.000001e+07    42371.000000       1.900000      15.600000   \n",
+      "25%      1.011081e+07    42697.000000      12.000000     206.437500   \n",
+      "50%      1.022104e+07    42988.000000      22.440000     386.360000   \n",
+      "75%      1.033094e+07    43232.000000      32.960000     583.660000   \n",
+      "max      1.044011e+07    43465.000000      48.000000    2048.030000   \n",
+      "\n",
+      "        Cost of Trip    Customer ID            Age  Income (USD/Month)  \n",
+      "count  359392.000000  359392.000000  359392.000000       359392.000000  \n",
+      "mean      286.190113   19191.652115      35.336705        15048.822937  \n",
+      "std       157.993661   21012.412463      12.594234         7969.409482  \n",
+      "min        19.000000       1.000000      18.000000         2000.000000  \n",
+      "25%       151.200000    2705.000000      25.000000         8424.000000  \n",
+      "50%       282.480000    7459.000000      33.000000        14685.000000  \n",
+      "75%       413.683200   36078.000000      42.000000        21035.000000  \n",
+      "max       691.200000   60000.000000      65.000000        35000.000000  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 359392 entries, 0 to 359391\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count   Dtype  \n",
+      "---  ------              --------------   -----  \n",
+      " 0   Transaction ID      359392 non-null  int64  \n",
+      " 1   Date of Travel      359392 non-null  int64  \n",
+      " 2   Company             359392 non-null  object \n",
+      " 3   City                359392 non-null  object \n",
+      " 4   KM Travelled        359392 non-null  float64\n",
+      " 5   Price Charged       359392 non-null  float64\n",
+      " 6   Cost of Trip        359392 non-null  float64\n",
+      " 7   Customer ID         359392 non-null  int64  \n",
+      " 8   Payment_Mode        359392 non-null  object \n",
+      " 9   Gender              359392 non-null  object \n",
+      " 10  Age                 359392 non-null  int64  \n",
+      " 11  Income (USD/Month)  359392 non-null  int64  \n",
+      "dtypes: float64(3), int64(5), object(4)\n",
+      "memory usage: 35.6+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "cab_merged = pd.merge(cab_tran, customer_db, how='left', on='Customer ID')\n",
+    "cab_merged.head(10)\n",
+    "print(cab_merged.describe())\n",
+    "print(cab_merged.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5353fd63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1937-03-09\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Transaction ID</th>\n",
+       "      <th>Date of Travel</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>City</th>\n",
+       "      <th>KM Travelled</th>\n",
+       "      <th>Price Charged</th>\n",
+       "      <th>Cost of Trip</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Payment_Mode</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income (USD/Month)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000011</td>\n",
+       "      <td>2016-01-10</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>370.95</td>\n",
+       "      <td>313.635</td>\n",
+       "      <td>29290</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>28</td>\n",
+       "      <td>10813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000012</td>\n",
+       "      <td>2016-01-08</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>28.62</td>\n",
+       "      <td>358.52</td>\n",
+       "      <td>334.854</td>\n",
+       "      <td>27703</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000013</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>9.04</td>\n",
+       "      <td>125.20</td>\n",
+       "      <td>97.632</td>\n",
+       "      <td>28712</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>53</td>\n",
+       "      <td>11242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000014</td>\n",
+       "      <td>2016-01-09</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>33.17</td>\n",
+       "      <td>377.40</td>\n",
+       "      <td>351.602</td>\n",
+       "      <td>28020</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000015</td>\n",
+       "      <td>2016-01-05</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>8.73</td>\n",
+       "      <td>114.62</td>\n",
+       "      <td>97.776</td>\n",
+       "      <td>27182</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>8536</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Transaction ID Date of Travel   Company        City  KM Travelled  \\\n",
+       "0        10000011     2016-01-10  Pink Cab  ATLANTA GA         30.45   \n",
+       "1        10000012     2016-01-08  Pink Cab  ATLANTA GA         28.62   \n",
+       "2        10000013     2016-01-04  Pink Cab  ATLANTA GA          9.04   \n",
+       "3        10000014     2016-01-09  Pink Cab  ATLANTA GA         33.17   \n",
+       "4        10000015     2016-01-05  Pink Cab  ATLANTA GA          8.73   \n",
+       "\n",
+       "   Price Charged  Cost of Trip  Customer ID Payment_Mode Gender  Age  \\\n",
+       "0         370.95       313.635        29290         Card   Male   28   \n",
+       "1         358.52       334.854        27703         Card   Male   27   \n",
+       "2         125.20        97.632        28712         Cash   Male   53   \n",
+       "3         377.40       351.602        28020         Cash   Male   23   \n",
+       "4         114.62        97.776        27182         Card   Male   33   \n",
+       "\n",
+       "   Income (USD/Month)  \n",
+       "0               10813  \n",
+       "1                9237  \n",
+       "2               11242  \n",
+       "3               23327  \n",
+       "4                8536  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date, timedelta\n",
+    "\n",
+    "cab_merged['Date of Travel'] = cab_merged['Date of Travel'].apply(lambda x: (date(1900, 1, 1) + timedelta(x)).strftime(\"%Y-%m-%d\"))\n",
+    "n = 13581\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "23854547",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +873,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10000011</td>\n",
-       "      <td>42377</td>\n",
+       "      <td>2016-01-10</td>\n",
        "      <td>Pink Cab</td>\n",
        "      <td>ATLANTA GA</td>\n",
        "      <td>30.45</td>\n",
@@ -664,7 +888,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10000012</td>\n",
-       "      <td>42375</td>\n",
+       "      <td>2016-01-08</td>\n",
        "      <td>Pink Cab</td>\n",
        "      <td>ATLANTA GA</td>\n",
        "      <td>28.62</td>\n",
@@ -679,7 +903,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10000013</td>\n",
-       "      <td>42371</td>\n",
+       "      <td>2016-01-04</td>\n",
        "      <td>Pink Cab</td>\n",
        "      <td>ATLANTA GA</td>\n",
        "      <td>9.04</td>\n",
@@ -694,7 +918,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10000014</td>\n",
-       "      <td>42376</td>\n",
+       "      <td>2016-01-09</td>\n",
        "      <td>Pink Cab</td>\n",
        "      <td>ATLANTA GA</td>\n",
        "      <td>33.17</td>\n",
@@ -709,7 +933,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10000015</td>\n",
-       "      <td>42372</td>\n",
+       "      <td>2016-01-05</td>\n",
        "      <td>Pink Cab</td>\n",
        "      <td>ATLANTA GA</td>\n",
        "      <td>8.73</td>\n",
@@ -721,97 +945,17 @@
        "      <td>33</td>\n",
        "      <td>8536</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10000016</td>\n",
-       "      <td>42376</td>\n",
-       "      <td>Pink Cab</td>\n",
-       "      <td>ATLANTA GA</td>\n",
-       "      <td>6.06</td>\n",
-       "      <td>72.43</td>\n",
-       "      <td>63.024</td>\n",
-       "      <td>27318</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>25</td>\n",
-       "      <td>13984</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>10000017</td>\n",
-       "      <td>42372</td>\n",
-       "      <td>Pink Cab</td>\n",
-       "      <td>AUSTIN TX</td>\n",
-       "      <td>44.00</td>\n",
-       "      <td>576.15</td>\n",
-       "      <td>475.200</td>\n",
-       "      <td>33788</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10000018</td>\n",
-       "      <td>42376</td>\n",
-       "      <td>Pink Cab</td>\n",
-       "      <td>AUSTIN TX</td>\n",
-       "      <td>35.65</td>\n",
-       "      <td>466.10</td>\n",
-       "      <td>377.890</td>\n",
-       "      <td>34106</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>10000019</td>\n",
-       "      <td>42381</td>\n",
-       "      <td>Pink Cab</td>\n",
-       "      <td>BOSTON MA</td>\n",
-       "      <td>14.40</td>\n",
-       "      <td>191.61</td>\n",
-       "      <td>146.880</td>\n",
-       "      <td>59799</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33</td>\n",
-       "      <td>19271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10000020</td>\n",
-       "      <td>42375</td>\n",
-       "      <td>Pink Cab</td>\n",
-       "      <td>BOSTON MA</td>\n",
-       "      <td>10.89</td>\n",
-       "      <td>156.98</td>\n",
-       "      <td>113.256</td>\n",
-       "      <td>57982</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>57</td>\n",
-       "      <td>5068</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Transaction ID  Date of Travel   Company        City  KM Travelled  \\\n",
-       "0        10000011           42377  Pink Cab  ATLANTA GA         30.45   \n",
-       "1        10000012           42375  Pink Cab  ATLANTA GA         28.62   \n",
-       "2        10000013           42371  Pink Cab  ATLANTA GA          9.04   \n",
-       "3        10000014           42376  Pink Cab  ATLANTA GA         33.17   \n",
-       "4        10000015           42372  Pink Cab  ATLANTA GA          8.73   \n",
-       "5        10000016           42376  Pink Cab  ATLANTA GA          6.06   \n",
-       "6        10000017           42372  Pink Cab   AUSTIN TX         44.00   \n",
-       "7        10000018           42376  Pink Cab   AUSTIN TX         35.65   \n",
-       "8        10000019           42381  Pink Cab   BOSTON MA         14.40   \n",
-       "9        10000020           42375  Pink Cab   BOSTON MA         10.89   \n",
+       "   Transaction ID Date of Travel   Company        City  KM Travelled  \\\n",
+       "0        10000011     2016-01-10  Pink Cab  ATLANTA GA         30.45   \n",
+       "1        10000012     2016-01-08  Pink Cab  ATLANTA GA         28.62   \n",
+       "2        10000013     2016-01-04  Pink Cab  ATLANTA GA          9.04   \n",
+       "3        10000014     2016-01-09  Pink Cab  ATLANTA GA         33.17   \n",
+       "4        10000015     2016-01-05  Pink Cab  ATLANTA GA          8.73   \n",
        "\n",
        "   Price Charged  Cost of Trip  Customer ID Payment_Mode Gender  Age  \\\n",
        "0         370.95       313.635        29290         Card   Male   28   \n",
@@ -819,33 +963,24 @@
        "2         125.20        97.632        28712         Cash   Male   53   \n",
        "3         377.40       351.602        28020         Cash   Male   23   \n",
        "4         114.62        97.776        27182         Card   Male   33   \n",
-       "5          72.43        63.024        27318         Cash   Male   25   \n",
-       "6         576.15       475.200        33788         Card   Male   23   \n",
-       "7         466.10       377.890        34106         Card   Male   19   \n",
-       "8         191.61       146.880        59799         Cash   Male   33   \n",
-       "9         156.98       113.256        57982         Cash   Male   57   \n",
        "\n",
        "   Income (USD/Month)  \n",
        "0               10813  \n",
        "1                9237  \n",
        "2               11242  \n",
        "3               23327  \n",
-       "4                8536  \n",
-       "5               13984  \n",
-       "6               23788  \n",
-       "7               19980  \n",
-       "8               19271  \n",
-       "9                5068  "
+       "4                8536  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cab_merged = pd.merge(cab_tran, customer_db, how='left', on='Customer ID')\n",
-    "cab_merged.head(10)"
+    "pink = cab_merged[cab_merged.Company == 'Pink Cab']\n",
+    "yellow = cab_merged[cab_merged.Company == 'Yellow Cab']\n",
+    "pink.head()"
    ]
   }
  ],
