--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0641bad9",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "This project will take data from the Pink Cab company and Yellow Cab Company to decide which is better to invest in.\n",
+    "\n",
+    "**Questions to Answer**\n",
+    "- Which company has a higher profit?\n",
+    "- Which company provides more rides each year?\n",
+    "- Which company makes more profit per ride?\n",
+    "- Which company has more unique customers?\n",
+    "- Which month do most rides occur per customer?\n",
+    "- Which month creates the most profit per company?\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "862f1bef",
@@ -2125,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eabd4844",
+   "id": "b05a65da",
    "metadata": {
     "scrolled": false
    },
@@ -2153,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4bd5cfe0",
+   "id": "353d8724",
    "metadata": {},
    "outputs": [
     {
