described merging process

--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3238bacd",
+   "id": "54032b50",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66be3a37",
+   "id": "43ee4029",
    "metadata": {},
    "source": [
     "## Load Data\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05edc60",
+   "id": "249497b2",
    "metadata": {},
    "source": [
     "## Data Observation\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539e3cb7",
+   "id": "6ab2ae72",
    "metadata": {},
    "source": [
     "First we look at the `cab_db`. We see that it has the following columns:\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6192809a",
+   "id": "41a62218",
    "metadata": {},
    "source": [
     "`city_db` contains the following columns:\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfd95c1",
+   "id": "75bf89de",
    "metadata": {},
    "source": [
     "`customer_db` contains the following columns:\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80ed74e2",
+   "id": "f9b4fb9c",
    "metadata": {},
    "source": [
     "`transaction_db` contains the following columns:\n",
@@ -421,7 +421,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "5be8429d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -500,6 +502,18 @@
    ],
    "source": [
     "transaction_db.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "744e687e",
+   "metadata": {},
+   "source": [
+    "## Merge Data\n",
+    "\n",
+    "In order to simplify our databases, they need to be merged.\n",
+    "\n",
+    "First the `cab_db` will be merged with the `transaction_db` into a database called `cab_tran`. Since the `cab_db` contains a record of each transaction, we will do a left merge based on it."
    ]
   },
   {
@@ -704,6 +718,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "297192b2",
+   "metadata": {},
+   "source": [
+    "Next we will merge `cab_tran` with `customer_db`.\n",
+    "\n",
+    "After this we use `.describe()` and `.info()` to check for null values or place holders"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ec7559d8",
@@ -765,6 +789,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71dd43cc",
+   "metadata": {},
+   "source": [
+    "There does not seem to be any null values or place holders, but the **Date of Travel** column is in the wrong format. We import `datetime` to change it into a more standard format. Since we will be using **year** and **month** info in our analysis, we create columns for them as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "7295a11c",
@@ -785,6 +817,14 @@
     "cab_merged.drop(labels=['Year', 'Month'], axis=1, inplace = True)\n",
     "cab_merged.insert(2, 'Year', col1)\n",
     "cab_merged.insert(3, 'Month', col2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f740f2a",
+   "metadata": {},
+   "source": [
+    "We will also be looking at profit for our analysis, so a **Profit** column is created by subtracting the **Cost of Trip** from the **Price Charged**."
    ]
   },
   {
@@ -962,6 +1002,14 @@
     "cab_merged.insert(7, 'Profit', profit)\n",
     "\n",
     "cab_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f4dfe31",
+   "metadata": {},
+   "source": [
+    "One final thing done to organize the data was to create a database for transactions from **Yellow Cab** and **Pink Cab**. A standard color to represent **Pink Cab** in the visuals is also created."
    ]
   },
   {
@@ -2190,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "64765b85",
+   "id": "ebf8f37e",
    "metadata": {
     "scrolled": false
    },
@@ -2219,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "01d5a354",
+   "id": "bd4ee4c0",
    "metadata": {},
    "outputs": [
     {
