described ride numbers graph

--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fb1e66c",
+   "id": "07fa37e3",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64595988",
+   "id": "7c03e9d4",
    "metadata": {},
    "source": [
     "## Load Data\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddf3bb52",
+   "id": "23d7595e",
    "metadata": {},
    "source": [
     "## Data Observation\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5718120f",
+   "id": "ebb69bf1",
    "metadata": {},
    "source": [
     "First we look at the `cab_db`. We see that it has the following columns:\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7f2cdf",
+   "id": "7ab7837e",
    "metadata": {},
    "source": [
     "`city_db` contains the following columns:\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbac8a15",
+   "id": "c98dce06",
    "metadata": {},
    "source": [
     "`customer_db` contains the following columns:\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b779f02d",
+   "id": "5b111c1c",
    "metadata": {},
    "source": [
     "`transaction_db` contains the following columns:\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b962a4a",
+   "id": "79f0330a",
    "metadata": {},
    "source": [
     "## Merge Data\n",
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36899ce8",
+   "id": "87f247b6",
    "metadata": {},
    "source": [
     "Next we will merge `cab_tran` with `customer_db`.\n",
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "370b14b8",
+   "id": "0ba43fe0",
    "metadata": {},
    "source": [
     "There does not seem to be any null values or place holders, but the **Date of Travel** column is in the wrong format. We import `datetime` to change it into a more standard format. Since we will be using **year** and **month** info in our analysis, we create columns for them as well."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e28c8ed",
+   "id": "79b2490e",
    "metadata": {},
    "source": [
     "We will also be looking at profit for our analysis, so a **Profit** column is created by subtracting the **Cost of Trip** from the **Price Charged**."
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c372e8d",
+   "id": "24a9ae3d",
    "metadata": {},
    "source": [
     "One final thing done to organize the data was to create a database for transactions from **Yellow Cab** and **Pink Cab**. A standard color to represent **Pink Cab** in the visuals is also created."
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21aed083",
+   "id": "e0ae2326",
    "metadata": {},
    "source": [
     "## Data Analysis\n",
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87f87f33",
+   "id": "481e1889",
    "metadata": {},
    "source": [
     "As you can see, **Yellow Cab** has a higher **Average Profit** ($14,661,003.83) and **Average Profit Percentage** (34.99%)."
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77faed04",
+   "id": "d1ad66bc",
    "metadata": {},
    "source": [
     "The above graphs highlights that both companies had more profits in 2017 while have less in 2018."
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f733d098",
+   "id": "82b602a2",
    "metadata": {
     "scrolled": false
    },
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37303826",
+   "id": "b0fe0c50",
    "metadata": {},
    "source": [
     "This graph highlights some differences between the two companies.\n",
@@ -2051,10 +2051,22 @@
     "**Yellow Cab**\n",
     "- Very similar **profit percentage** in 2016 and 2017\n",
     "- Drop in **profit percentage** in 2018\n",
-    "- While **profit** was UP from 2017 to 2018, the **profit percentage** went down.\n",
+    "- While **profit** was UP from 2017 to 2018, the **profit percentage** went down\n",
     "\n",
-    "**Pink Cab\n",
-    "- "
+    "**Pink Cab**\n",
+    "- Drop in **profit percentage** from 2016 to 2017 \n",
+    "- Rise in **profit percentage** in 2018\n",
+    "- While **profit** dropped 2018, **profit percentage** increased "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "387b292e",
+   "metadata": {},
+   "source": [
+    "### Ride Numbers\n",
+    "\n",
+    "Next we look into the number or rides per year. This is done by counting the number of `Transaction ID`s that appear in each year."
    ]
   },
   {
@@ -2111,6 +2123,14 @@
     "\n",
     "plt.show()\n",
     "plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81aafbcf",
+   "metadata": {},
+   "source": [
+    "We see that while both companies have s similar pattern, **Yellow Cab** does over twice as many rides as **Pink Cab**"
    ]
   },
   {
@@ -2213,7 +2233,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eb04c8c6",
+   "id": "378e6014",
    "metadata": {
     "scrolled": false
    },
@@ -2242,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3124cb63",
+   "id": "d59707d2",
    "metadata": {},
    "outputs": [
     {
