described profits per month

--- a/taxi_notebook.ipynb
+++ b/taxi_notebook.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This project will take data from the Pink Cab company and Yellow Cab Company to decide which is better to invest in.\n",
+    "This project will take data from the **Pink Cab** company and **Yellow Cab** Company to decide which is better to invest in.\n",
     "\n",
     "**Questions to Answer**\n",
     "- Which company has a higher profit?\n",
     "- Which company provides more rides each year?\n",
     "- Which company has more unique customers?\n",
-    "- Which month do most rides occur per customer?\n",
+    "- Which month do most rides occur per company?\n",
     "- Which month creates the most profit per company?\n",
     "\n"
    ]
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd8bf19",
+   "id": "c0cb41c5",
    "metadata": {},
    "source": [
     "### Unique Customers\n",
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30adee33",
+   "id": "663b8122",
    "metadata": {},
    "source": [
     "As with the ride numbers, the unique customers for both companies have a similar patter with **Yellow Cab** having a larger number."
@@ -2206,7 +2206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ff3323",
+   "id": "09f93919",
    "metadata": {},
    "source": [
     "### Rides per Month\n",
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a80ae2",
+   "id": "73e44ac7",
    "metadata": {},
    "source": [
     "This graph shows the following for both companies:\n",
@@ -2260,11 +2260,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e886d20e",
+   "id": "fd427239",
    "metadata": {},
    "source": [
     "### Profit per Month\n",
-    "\n"
+    "\n",
+    "The last question we will look into is which month has the highest profit."
    ]
   },
   {
@@ -2312,6 +2313,21 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be83960e",
+   "metadata": {},
+   "source": [
+    "The graph shows us the following:\n",
+    "\n",
+    "**Yellow Cab**\n",
+    "- Lower profits in Feb-Apr and July-Aug\n",
+    "- Highest profit in December\n",
+    "\n",
+    "**Pink Cab**\n",
+    "- Lower Profits from Feb - "
    ]
   }
  ],
